test/files/neg/not-a-legal-formal-parameter-tuple.check
not-a-legal-formal-parameter-tuple.scala:2: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple2,
      or consider a pattern matching anonymous function: `{ case (a, b) => ... }
  val x: ((Int, Int) => Int) = (((a, b)) => a)
                                 ^
not-a-legal-formal-parameter-tuple.scala:3: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple2,
      or consider a pattern matching anonymous function: `{ case (param1, param2) => ... }
  val y: ((Int, Int, Int) => Int) = (((a, !!)) => a)
                                      ^
not-a-legal-formal-parameter-tuple.scala:4: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple3,
      or consider a pattern matching anonymous function: `{ case (param1, ..., param3) => ... }
  val z: ((Int, Int, Int) => Int) = (((a, NotAPatternVariableName, c)) => a)
                                      ^
three errors found
